--- a/app/src/main/res/layout/cm_device_update_two.xml
+++ b/app/src/main/res/layout/cm_device_update_two.xml
@@ -191,6 +191,7 @@
             android:id="@+id/one_text_line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:text="下载"
         android:gravity="center"
         android:textAlignment="center"
