--- a/app/src/main/res/layout/sensor_device_update_two.xml
+++ b/app/src/main/res/layout/sensor_device_update_two.xml
@@ -195,6 +195,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="安装"
+        android:padding="20dp"
+
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="#ffffff"
