update update: 1.p10 连接不上的时候先通过反射调用系统清空缓存 2.多次尝试连接保证可以连接上

--- a/app/src/main/res/layout/cm_tea_main.xml
+++ b/app/src/main/res/layout/cm_tea_main.xml
@@ -339,6 +339,7 @@
             android:layout_below="@+id/pc_tea_choose_line"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
+            android:gravity="center"
             android:textColor="@color/white"
             android:textSize="15sp" />
     </RelativeLayout>
